--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,8 +33,13 @@ nav {
 	margin: 0;
 }
 
-.button-collapse {
+nav .button-collapse {
 	float: right !important;
+}
+
+nav .input-field {
+	height: 80%;
+	border-bottom: solid 1px $primary-color !important;
 }
 
 nav .input-field label i{
