A shift to a single search page
all search interaction is on the search page. datatables implemented,
and some placeholder data included

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -28,13 +28,21 @@ mark {
 	background: none;
 }
 
+.navbar-fixed {
+	height: 112px;
+}
+
 nav {
 	background-color: #FFFFFF;
 	margin: 0;
+	height: 112px;
 }
 
 nav .button-collapse {
 	float: right !important;
+}
+
+nav .dropdown-content {
 }
 
 nav .input-field {
@@ -69,28 +77,98 @@ nav .input-field label.active i{
 	background-color: $secondary-color;
 }
 
+.tab-container {
+	margin-bottom: 0;
+	justify-content: space-around;
+}
+
 .tab-container, .tab-container>.collapsible {
 	display: flex;
-	flex-flow: row;
-	flex: 1 1 auto;
-}
-
-.tab-container>.input-field {
-	display: flex !important;
 	flex-flow: column;
-}
-
-.tab-container>.input-field>.h6 {
 	flex: 0 1 auto;
 }
 
-.tab-container>.input-field>.select {
+#keyword-search-holder {
+	display: flex !important;
+	flex-flow: column;
+	padding: 10px;
+	margin-top: 10px;
+}
+
+#keyword-search-holder input, #keyword-search-holder i {
+	font-size: 3rem;
+	height: 4rem;
+}
+
+#factor-search-holder {
+	display: none !important;
+	flex-flow: row wrap;
 	flex: 1 1 auto;
+	font-size: 3vmin;
+}
+
+.tab-container .input-field {
+	display: flex !important;
+	flex-flow: column;
+	margin: 0 0 0.75rem 0;
 }
 
 .multi-select-column {
 	display: block;
 	flex: 1 1 auto;
+}
+
+.dataTables_wrapper {
+	display: flex;
+	flex-flow: row wrap;
+	padding: 10px 0 10px 0;
+}
+
+.dataTables_wrapper .dataTables_length {
+	flex: 0 1 auto;
+	padding-right: 10px;
+}
+
+.dataTables_wrapper .dataTables_filter {
+	flex: 1 1  auto;
+}
+
+.dataTables_wrapper .dataTables_info {
+	flex: 1 1  auto;
+	display: flex;
+	justify-content: center;	
+}
+
+td.details-control {
+    background: url('../resources/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('../resources/details_close.png') no-repeat center center;
+}
+
+.dataTables_paginate {
+	flex: 1 1 auto;
+	display: flex;
+	justify-content: center;
+}
+
+.dataTables_paginate a {
+	font-size: 1.2rem;
+	float: left;
+	height: 30px;
+	min-width: 30px;
+	margin: 0 10px;
+	border-radius: 2px;
+	text-align: center;
+}
+
+.dataTables_paginate span {
+	float: left;
+}
+
+.dataTables_paginate .current {
+	background-color: $secondary-color;
 }
 
 footer.page-footer {
